--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -21,7 +21,11 @@
 
  </div>
 
-<div fxFlex *ngIf="selectedDish"> 
+ <app-dishdetail></app-dishdetail>
+ 
+</div>
+
+<!-- <div fxFlex *ngIf="selectedDish"> 
   <mat-card>
     <mat-card-header>
       <mat-card-title>
@@ -41,5 +45,4 @@
       <button mat-button>SHARE</button>
     </mat-card-actions>   
   </mat-card>
-</div>
-</div>
+</div> -->
