--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -56,4 +56,8 @@ fxLayoutGap.xs="0">
     </mat-list> 
 </div>
 
+<div fxFlex [hidden]="dish">
+  <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait . . .</h4>
+</div>
+
 </div>
