--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -10,7 +10,7 @@
           </h3>
         </mat-card-title>
       </mat-card-header>
-      <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+      <img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
       <mat-card-content>
         <p>
           {{dish.description}}
@@ -42,17 +42,17 @@
         </p>
       </mat-list-item>
     </mat-list>
-    <md-list *ngIf="commentForm.valid">
-      <md-list-item>
-          <h4> {{commentForm.get('comment').value}}</h4>
-          <p> {{commentForm.get('rating').value}} Stars</p>
-          <p> 
+    <mat-list *ngIf="commentForm.valid">
+      <mat-list-item>
+          <h4 matLine> {{commentForm.get('comment').value}}</h4>
+          <p matLine> {{commentForm.get('rating').value}} Stars</p>
+          <p matLine> 
               <span>
                   -- {{commentForm.get('author').value}} 
               </span>
               </p>
-      </md-list-item>
-      </md-list>
+      </mat-list-item>
+      </mat-list>
     
       <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
         <p>
