--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -44,40 +44,40 @@
     </mat-list>
     <mat-list *ngIf="commentForm.valid">
       <mat-list-item>
-          <h4 matLine> {{commentForm.get('comment').value}}</h4>
-          <p matLine> {{commentForm.get('rating').value}} Stars</p>
-          <p matLine> 
-              <span>
-                  -- {{commentForm.get('author').value}} 
-              </span>
-              </p>
+        <h4 matLine> {{commentForm.get('comment').value}}</h4>
+        <p matLine> {{commentForm.get('rating').value}} Stars</p>
+        <p matLine>
+          <span> -- {{commentForm.get('author').value}} </span>
+        </p>
       </mat-list-item>
-      </mat-list>
-    
-      <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
-        <p>
-          <mat-form-field class="full-width">
-            <input matinput formcontrolname="author" placeholder="Name" type="text" required>
-            <mat-error *ngIf="formErrors.author">{{formErrors.author}} </mat-error>
-          </mat-form-field>
-        </p>
-        <mat-slider min="1" max="5" step="1" value="5" thumbLabel tickInterval="1" [displayWith]="slider" formcontrolname="rating">
+    </mat-list>
+
+    <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">{{formErrors.author}} </mat-error>
+        </mat-form-field>
+        <mat-slider min="1" max="5" step="1" value="5" thumbLabel tickInterval="1" [displayWith]="slider"
+          formControlName="rating">
         </mat-slider>
-        <p>
-          <mat-form-field class="full-width">
-            <textarea matinput formcontrolname="comment" placeholder="Your Comment" rows="12" required></textarea>
-            <mat-error *ngIf="formErrors.comment"> {{ formErrors.comment }}</mat-error>
-          </mat-form-field>
-        </p>
-        <button type="submit" mat-button class="background-primary text-floral-white"
-          [disabled]="commentForm.invalid">Submit</button>
-      </form>
-        
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows="12" required></textarea>
+          <mat-error *ngIf="formErrors.comment"> {{ formErrors.comment }}</mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white"
+        [disabled]="commentForm.invalid">Submit</button>
+    </form>
   </div>
 
-  <div fxFlex [hidden]="dish">
+  <div fxFlex [hidden]="dish || errMess">
     <mat-spinner></mat-spinner>
     <h4>Loading . . . Please Wait . . .</h4>
+  </div>
+  <div fxFlex *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{errMess}}</h4>
   </div>
 
 </div>
